# LatencyLab

./: LICENSE  README.md  charts.ipynb  prompt.csv  prompt.ipynb  pyproject.toml
.github/workflows/: pre-commit.yaml
latencylab/: base.py  main.py  prompt.py  run.py
latencylab/output/: csv.py  stdout.py
latencylab/providers/: azure.py  base.py  input_text.txt  openai.py
